--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Turing phonebook application"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.9",
+]
